<resources>
    <string name="app_name">吃飽飽快餐店-點餐單</string>
    <string name="method">取餐方式</string>
    <string name="choose">選擇餐點</string>
    <string name="takeout">外送</string>
    <string name="at_store">店取</string>
    <string name="chk6">雞排</string>
    <string name="chk1">雞米花</string>
    <string name="chk2">甜不辣</string>
    <string name="chk3">薯條</string>
    <string name="chk4">米血</string>
    <string name="chk5">百頁豆腐</string>
    <string name="submit">送出</string>
</resources>
